Add MP Bean Validation translations (#802)
